      for providing an initial patch.  (Closes: #624201)
  * checks/scripts{,.desc}:
    + [NT] Removed perl-suid related tags as the package is no
      longer available and we have no known packages triggering
      the tags at the moment.  (Closes: #631432)
  * checks/symlinks:
    + [NT] Symlink checking extended to relative paths as well.
      (Closes: #217023)

  * collections/fields:
    + [NT] Removed creation of cross package symlinks.  They have
      been replaced by the group information that checks are
      passed.
  * collection/file-info:
    + [NT] Double check the output of file(1) when it says a ".gz"
      file is not gzip compressed.  This should reduce the number
      of false-positives gz-file-not-gzip tags.
      (Closes: #620289)
  * collection/index{,.desc}:
    + [NT] Updated to handle source packages and with support for
      multi tarball source packages.

  * data/fields/*:
    + [NT] Added new files based on data variables from checks/fields.
  * data/rules/{deprecated,known}-makefiles:
    + [NT] Added file.
  * data/spelling/corrections:
    + [RA] Remove discontiguous correction.  The OED lists this as valid.
      Thanks, Charles Plessy.  (Closes: #632159)

  * debian/control:
    + [NT] Bumped debhelper version to 8.1.0 due to the build-arch and
      build-indep targets.  Thanks to Mark Hymers for the heads up and
      a patch.  (Closes: #632550)
    + [NT] Added Build-Depends on cdbs, it is needed for some of the
      tests.
  * debian/lintian.install:
    + [NT] Added the profiles directory.
  * debian/rules:
    + [NT] Added target to update the profiles.

  * doc/lintian.xml:
    + [NT] Added information about the new Vendor profiles.
    + [NT] Improved various parts of the User Manual.  Especially
      mention that Lintian can be run on changes files and this
      processes all packages related to the changes file.

  * frontend/{lintian,lintian-info}:
    + [NT] Added profile support (new option --profile), please