@@ -124,7 +124,7 @@ if ($format =~ /^\s*2\.0\s*\z/ or $format =~ /^\s*3\.0\s*\(quilt\)/) {
     my $wanted = sub { check_debfiles($pkg, $info, $droot, \%warned) };
     find($wanted, $droot);
 } elsif (not $info->native) {
-    check_diffstat('diffstat', \%warned);
+    check_diffstat($info->diffstat, \%warned);
 }
 my $wanted = sub { find_cruft($pkg, $info, $info->unpacked, \%warned, $atdinbd, $ltinbd) };
 find($wanted, $info->unpacked);
